--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-chartjs-2": "^3.0.5",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
